Man kann jetzt Units hinzufügen und löschen. Der Name der Units wird automatisch gesetzt. (New Unit, New Unit (1), New Unit (2),...) Die Units werden gesammelt als ArrayList abgespeichert und beim Start der App wieder geladen.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -7,4 +7,6 @@
     <string name="deleteUnit">Unit löschen</string>
     <string name="renameUnit">Unit umbenennen</string>
     <string name="manageUnit">Unit verwalten</string>
+    <string name="deleteuniterror">Es wird mindestends eine Unit benötigt</string>
+    <string name="newUnit">Neue Unit</string>
 </resources>
