--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,4 +10,8 @@
     <string name="deleteuniterror">Es wird mindestends eine Unit benötigt</string>
     <string name="newUnit">Neue Unit</string>
     <string name="renameError">Bitte einen Namen mit weniger als 17 Buchstaben auswählen</string>
+    <string name="addWord">Wort hinzufügen</string>
+    <string name="cancel">Abbrechen</string>
+    <string name="foreignWord">Fremdwort</string>
+    <string name="translation">Übersetzung</string>
 </resources>
