--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,15 @@
     <string name="action_settings">Settings</string>
 
     <string name="knowledgeText">How well do you know this word?</string>
-    <string name="addUnit">Add Unit</string>
-    <string name="deleteUnit">Delete Unit</string>
-    <string name="renameUnit">Rename Unit</string>
-    <string name="manageUnit">Manage Unit</string>
+    <string name="addUnit">Add unit</string>
+    <string name="deleteUnit">Delete unit</string>
+    <string name="renameUnit">Rename unit</string>
+    <string name="manageUnit">Manage unit</string>
     <string name="deleteuniterror">You need at least one unit</string>
-    <string name="newUnit">New Unit</string>
+    <string name="newUnit">New unit</string>
     <string name="renameError">Please select a name with less than 17 characters</string>
+    <string name="addWord">Add word</string>
+    <string name="cancel">Cancel</string>
+    <string name="foreignWord">Foreign word</string>
+    <string name="translation">Translation</string>
 </resources>
