--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,4 +14,7 @@
     <string name="cancel">Abbrechen</string>
     <string name="foreignWord">Fremdwort</string>
     <string name="translation">Übersetzung</string>
+    <string name="means">bedeutet</string>
+    <string name="next">Weiter</string>
+    <string name="evaluation">Auswertung</string>
 </resources>
