--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="cancel">Cancel</string>
     <string name="foreignWord">Foreign word</string>
     <string name="translation">Translation</string>
+    <string name="means">means</string>
+    <string name="next">Next</string>
+    <string name="evaluation">Evaluation</string>
+
 </resources>
