Wörter können nun hinzugefügt und angezeigt werden
Man kann jetzt Wörter hinzufügen. Diese werden in einer ArrayList in
jeder Unit gespeichert. Mit dem "Weiter"-Button kann man sich die
Übersetzung bzw. das nächste Wort anzeigen lassen. Außerdem kann man mit
den 4 farbigen Buttons die "knowledge" festlegen (default auf 0 (Rot)).
Die knowledge legt fest wie wahrscheinlich ein Wort drankommt:
0 (Rot): 100%
1 (Orange): 80%
2 (Hellgrün): 50%
3 (Dunkelgrün): 20%

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,4 +17,6 @@
     <string name="means">bedeutet</string>
     <string name="next">Weiter</string>
     <string name="evaluation">Auswertung</string>
+    <string name="unitAddText">wurde hinzugefügt</string>
+    <string name="unitDeleteText">wurde gelöscht</string>
 </resources>
