Unitliste und Wörterliste erstellt, Checkbox schöner
Man kann jetzt in den Einstellungen auf "Wörterliste" klicken. Dadurch
öffnet sich eine neue Activity mit einer scrollbaren Liste aller Units.
Man kann auf jede Unit klicken. Dadurch öffnet sich wieder eine neue
Activity mit einer scrollbaren Liste aller Wörter in dieser Unit.
Weiteres würde die Farbe der Checkbox angepasst. Außerdem hat sie jetzt
einen weißen statt transparenten Hintergrund.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="evaluation">Evaluation</string>
     <string name="unitAddText">has been added</string>
     <string name="unitDeleteText">has been deleted</string>
+    <string name="title_activity_wordlist">wordListActivity</string>
 
 </resources>
