--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -22,4 +22,5 @@
     <string name="addWordError">Wort darf nicht leer sein</string>
     <string name="delete">Löschen</string>
     <string name="editWord">Wort bearbeiten</string>
+    <string name="wordList">Wörterliste</string>
 </resources>
