Wortwiederholungen können geändert werden
Man kann jetzt in den Einstellungen die Wortwiederholungen ändern. Diese
sind seperat für 11-20, 21-30 und 31+ Wörter einstellbar, werden in
einer Datei abgespeichert und beim Start der App eingelesen.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -24,4 +24,9 @@
     <string name="wordList">Wörterbuch</string>
     <string name="wordRepitition">Wortwiederholungen</string>
     <string name="words">Wörter</string>
+    <string name="help">Hilfe</string>
+    <string name="repError1">Bitte gib eine Nummer zwischen 0 und 10 für "11 - 20 Wörter ein"</string>
+    <string name="repError2">Bitte gib eine Nummer zwischen 0 und 20 für "21 - 30 Wörter ein"</string>
+    <string name="repError3">Bitte gib eine Nummer zwischen 0 und 30 für "31+ Wörter ein"</string>
+    <string name="repHelpText">ToDo</string>
 </resources>
