Android 7.0 Update, Vorbereitung für Ads
Update auf Target SDK 24, Gradle und Support Library Updates,
Vorbrereitung auf In-App Werbung, Icons auf den FABs sind unfreiwillig
wieder klein geworden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="askTranslation">Foreign word first</string>
     <string name="askError">You have to select at least one option</string>
 
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
