Implemented import/export units
Users can now export their units to the devices "Downloads" folder. The
units have a ".vocago" extension. Users can also import units.
Currently, when users press the "Import units"-button, every unit from
the download folder is being imported. This will be more user-friendly
in the future.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -34,4 +34,7 @@
     <string name="askTranslation">Fremdwort zuerst</string>
     <string name="askHelpText">Mit dieser Option kann eingestellt werden, ob zuerst das Frendwort oder die Übersetzung gezeigt werden soll. Wenn beides ausgewählt ist, wird das zuerst gezeigte Wort zufällig gewählt.</string>
     <string name="askedWords">Zuerst gezeigtes Wort</string>
+    <string name="importUnit">Unit Importieren</string>
+    <string name="exportUnit">Unit exportieren</string>
+    <string name="exportSuccess">wurde in ihren \'Downloads\' Ordner gespeichert</string>
 </resources>
